Finally fixed the weird scroll bar and not fit page for the editor

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -16,13 +16,15 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
-.CodeMirror { height: 100%; }
+
 h1 {
   font-size: 22px;
 }
+
 #main {
-  height:100%;
+  height: 100%;
 }
+
 #navbar {
   height: var(--navbar-height);
   background-color: var(--primary);
@@ -36,11 +38,34 @@ h1 {
   letter-spacing: 0.9px;
 }
 
-.cm-wrap { height: 80%; border: 1px solid silver}
-.cm-scroller { overflow: auto; }
-
 .navbar-brand img {
   padding-top: 10px;
+}
+
+
+.cm-wrap {
+  height: 80%;
+  border: 1px solid silver
+}
+
+.cm-scroller {
+  overflow: auto;
+}
+
+.codeArea {
+  flex: 1 1 auto;
+  margin-top: 0;
+  height: 100%;
+  position: relative;
+}
+
+.CodeMirror {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
 }
 
 .loading-spinner {
@@ -60,7 +85,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; 
+  height: 100%;
   /* calc(100vh - var(--navbar-height)); */
 }
 
